2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/sulog.c (sulog): The success argument is a bool.
	* libmisc/sulog.c: The return values of fflush is not checked on
	purpose.
	* libmisc/sulog.c: Indicate that some return values should be
	checked.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/ttytype.c: Avoid implicit conversion of pointers /
	integers to booleans.
	* libmisc/ttytype.c: Avoid assignments in comparisons.
	* libmisc/ttytype.c: Add brackets and parenthesis.
	* libmisc/ttytype.c: The return values of fclose is not checked on
	purpose.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/mail.c: Avoid implicit conversion of pointers to
	booleans.
	* libmisc/mail.c: Avoid assignments in comparisons.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/loginprompt.c: Avoid implicit conversion of pointers /
	chars to booleans.
	* libmisc/loginprompt.c: Add brackets.
	* libmisc/loginprompt.c: Avoid assignments in comparisons.
	* libmisc/loginprompt.c: The return values of fclose and fflush
	are not checked on purpose.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/setupenv.c: Avoid implicit conversion of chars to
	booleans.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c: selinux_checked, selinux_enabled, and set_orig
	are now booleans.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/setugid.c (setup_uid_gid): The is_console argument is now
	a bool.
	* libmisc/setugid.c: Avoid implicit conversion of integers /
	pointers to booleans.
	* libmisc/setugid.c: Add brackets.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/pam_pass.c (do_pam_passwd): The silent and
	change_expired are no booleans instead of int.
	* libmisc/pam_pass.c: The return value of pam_end is not checked
	on purpose.
